2012-09-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct omission from copyright notice.

	* src/pkgkeys.c: Add year 2012, to reflect 2012-09-02 update.

2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Redefine paragraph_key with project global scope.

	* src/pkgkeys.h (paragraph_key): Declare it.
	* src/pkgkeys.c (paragraph_key): Define it.

	* src/pkgshow.cpp (pkgDirectoryViewer::EmitDescription): Delete
	function local definition; use global definition instead.

2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct defect introduced by 2012-08-03 commit.

	* src/approot.c (AppPathNameW): Add omitted 'else', so that tail
	pointer isn't moved after the APPROOT prefix is truncated.

2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remap Mercurial subrepository reference via local hg-git clone.

	* .hgsub (build-aux): Point to ../build-aux; this must be a locally
	hosted hg clone of the git origin repository, and it must pre-exist as
	a sibling of any created hg clone of the mingw-get repository.

	* .hgsubstate: New file, automatically generated by Mercurial.

2012-08-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add Mercurial subrepository reference for build-aux.

	* .hgsub: New file.

2012-08-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	More code refactoring, to facilitate GUI implementation.

	* src/clistub.c (AppPathNameW): Factor out; relocate to...
	* src/approot.c: ...this new file; it reproduces the original
	implementation, modified to also consider any "libexec" directory in
	the executable path as the first child of the APPROOT prefix.  Note
	also, that no longer terminates APPROOT with a trailing backslash.

	* src/approot.h: New file; it trivially declares the prototype for...
	(AppPathNameW): ...this relocated extern "C" function.

	* src/clistub.c (main): Adapt usage of AppPathNameW(), to reinstate